Fix Modal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -47,10 +47,6 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-  
-html, body {
-  height: 100%;
-}
 
 p, input, button, span, div {
   font-size: var(--font-size);
